# template

./: .gitignore  .pre-commit-config.yaml  README.md  gitlab-ci.yml  mkdocs.yml  pyproject.toml  ruff.toml
docs/: index.md
