[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas M. Maaiveld (Tommy)",email = "tommy.maaiveld@tno.nl"}
]
readme = "README.md"
requires-python = ">=3.11"

[dependencies]


[dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.5"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.28.0"}
mkdocs-material = "^9.6.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
