[project]
name = "<TEMPLATE:project_name>"
version = "0.1.0"
description = ""
authors = [
    {name = " <TEMPLATE:author_name>",email = " <TEMPLATE:author_email>"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.5"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.28.0"}
mkdocs-material = "^9.6.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
cache-dir = "cache/ruff"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
